fixing Issue #2998 on Data Grid Overlap
this issue is because of the positions of components of guideSideNav and guidePageContent, I have to change the z-index value of guidePageContent so that these components don't overlap and I set z-index: auto to xs,s  Breakpoint.

--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -51,6 +51,7 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
   border-left: $euiBorderThin;
   max-width: 1000px;
   margin-left: 240px;
+  z-index:1;
 }
 
 .guideDemo__highlightLayout {
@@ -228,6 +229,7 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
   .guidePageContent {
     margin-left: 0;
     width: 100%;
+    z-index:auto;
   }
 }
 
